@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1156 2010-02-11 19:01:51 mb Exp $
+# $Id: CHANGES,v 1.1157 2010-02-12 16:49:11 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -183,6 +183,7 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.8 (2010/??/??)
+ - (2010/02/12) Fixed bug#4936 - Kernel::System::Main::FileWrite has race condition.
  - (2010/02/11) Fixed bug#4442 - Customer search fails when there is a space
     in the name.
  - (2010/02/11) Fixed bug#4822 - No fulltext search with more then one word
